--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -61,7 +61,7 @@
       </div>
     </nav>
     <!-- Header -->
-    <div>
+    <div style="min-height: 75vh;">
       {% block content %}
       {% endblock content %}
     </div>
@@ -88,18 +88,25 @@
               href="{% url 'home.about' %}">
               About
             </a></p>
+            <p>
+            <a class="nav-link" 
+               href="{% url 'movies.index' %}">Movies</a></p>
+            <p>
+            <a class="nav-link"
+              href="{% url 'cart.index' %}">Cart</a>
+            </p>
           </div>
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
             <b>CONTACT</b>
             <hr />
             <p><i class="fas fa-home me-2"></i>
-              150-2345 Tokyo-to, Japan
+              Atlanta, GA - USA
             </p>
             <p><i class="fas fa-envelope me-2"></i>
-              info@moviesstore.com
+              pchen396@gatech.edu
             </p>
             <p><i class="fas fa-phone me-2"></i>
-              +81 03-3333-3333
+              +55 (11) 99685-3200
             </p>
           </div>
         </div>
@@ -109,11 +116,8 @@
       <div class="container d-flex justify-content-between">
         <div class="me-5 text-white">
           <span>DESIGNED BY
-            <a href="https://www.x.com/danielgarax"
-            target="_blank">DANIEL CORREA</a> &
-            <a href="https://www.x.com/greglim81"
-            target="_blank">GREG LIM</a>
-          </span>
+            <a href="https://github.com/peuch7"
+            target="_blank">PEDRO CHEN</a> 
         </div>
         <div class="text-white">
           <span>© Copyright - 2024</span>
