--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,15 +2,15 @@
 {% block content %}
 <header class="masthead bg-index text-white text-center py-4">
   <div class="container d-flex align-items-center flex-column pt-2">
-    <h2>Movies Store</h2>
+    <h2>GT Movies Store</h2>
     <p>Your Ticket to Unlimited Entertainment!</p>
   </div>
 </header>
-<div class="p-3">
+<div style="padding-top: 23vh">
   <div class="container">
     <div class="row mt-3">
       <div class="col mx-auto text-center mb-3">
-        <h4>Welcome to the best movie store!!</h4>
+        <h4 style="font-size: 45px;">Welcome to the best movie store!!</h4>
       </div>
     </div>
   </div>
